--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,17 @@
-<div fxLayout="row column" fxLayoutGap="20px" fxLayoutAlign="start">
+<br>
+<nav class="nav nav-pills nav-fill navbar navbar-dark bg-dark">
+    <a class="nav-item nav-link active" href="/">HOME</a>
+    <a class="nav-item nav-link" href="/addproduct">Add Product</a>
+    <a class="nav-item nav-link" href="/productlist">Product List</a>
+    <a class="nav-item nav-link" href="/signIn">SignIn</a>
+    <a class="nav-item nav-link" href="/signUp">SignUp</a>
+    <!-- <a class="nav-item nav-link " href="/logout">LOGOUT</a> -->
+  </nav>
+
+ 
+
+
+<!-- <div fxLayout="row column" fxLayoutGap="20px" fxLayoutAlign="start">
 
 <div fxFlex>
     <app-product></app-product>
@@ -8,6 +21,6 @@
     <app-product-list></app-product-list>
 </div>
 
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
